final updates for Version 6.0